3.9.1 compiling initial setup